[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "fire"
ignore_missing_imports = true

[tool.poetry]
name = "syndiffix"
version = "0.1.0"
description = "Pure Python implementation of SynDiffix"
authors = ["Open Diffix <hello@open-diffix.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "^2.0.3"
fire = "^0.5.0"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
pandas-stubs = "^2.0.2.230605"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
