[tool.flake8]
max-line-length = 120
ignore = ["E203", "F403", "F405", "W503"] # black compatibility, allow star imports and break before binary operator

[tool.black]
line-length = 120
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "fire"
ignore_missing_imports = true

[tool.poetry]
name = "syndiffix"
version = "1.0.0a0"
description = "Python implementation of the SynDiffix synthetic data generation mechanism."
authors = ["Open Diffix <hello@open-diffix.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://open-diffix.org/"
repository = "https://github.com/diffix/syndiffix"


[tool.poetry.dependencies]
python = "^3.10.0"
pandas = "^2.0.3"
fire = "^0.5.0"
flake8-pyproject = "^1.2.3"
scikit-learn = "^1.3.0"
appdirs = "^1.4.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
pandas-stubs = "^2.0.2.230605"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
