[tool.flake8]
max-line-length = 120
ignore = ["E203", "F403", "F405", "W503"] # black compatibility, allow star imports and break before binary operator

[tool.black]
line-length = 120
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.poetry]
name = "syndiffix"
version = "1.0.7"
description = "Python implementation of the SynDiffix synthetic data generation mechanism."
authors = ["Open Diffix <hello@open-diffix.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://open-diffix.org/"
repository = "https://github.com/diffix/syndiffix"
include = ["CHANGELOG.md", "docs/*", "example_simple.py"]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.1"
flake8-pyproject = ">=1.2.3"
scikit-learn = ">=1.3"
appdirs = ">=1.4.4"
scipy = ">=1.9"
types-appdirs = ">=1.4.3.5"
pyarrow = ">=17.0.0"
fastparquet = ">=2024.5.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
pandas-stubs = "^2.1.1"
isort = "^5.12.0"
types-psutil = "^7.0.0.20250218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
